k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtg-deck-shuffler-service
  namespace: mtg-deck-shuffler
spec:
  selector:
    app: mtg-deck-shuffler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer  # Creates AWS ELB
