k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtg-deck-shuffler-ingress
  labels:
    app: mtg-deck-shuffler
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mtg.jessitron.honeydemo.io # give your domain name here
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: onlyonealbplease
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=orion-alb-access-logs,access_logs.s3.prefix=orion-alb
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "mtg.jessitron.honeydemo.io"
  rules:
    - host: "mtg.jessitron.honeydemo.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mtg-deck-shuffler-service
                port:
                  number: 80
